# kaggle-ai-dlc-workflow-template

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  COPILOT.md  README.md  pyproject.toml
.agents/skills/improvement-review/: SKILL.md
.agents/skills/kaggle-starter/: SKILL.md
.agents/skills/kaggle-winning-research/: SKILL.md
.claude/: settings.json
.claude/commands/: improvement-review.md  kaggle-starter.md  kaggle-winning-research.md  technical-research.md
.codex/: config.toml
.github/: copilot-instructions.md
.github/workflows/: check-template-sync.yml
.kiro/agents/: research-agent.json
.kiro/settings/: mcp.json
aidlc-docs/: audit.md
aidlc-docs/construction/: architecture.md  code-generation-plan.md  experiment-plan.md  implementation-candidates.md  implementation-questionnaire.md  kaggle-data-access.md
aidlc-docs/inception/: kaggle-starter.md  technical-research.md  winning-research.md
aidlc-docs/operations/: cv-lb-tracking.md  experiment-log.md  improvement-loop.md
configs/: baseline.yaml
docs/: 00_project_concept.md  01_agent_execution_guide.md  02_quickstart.md  03_prompt_templates.md  04_kaggle_auth_setup.md  05_mcp_setup.md
docs/assets/: improvement-report.css
scripts/: download_kaggle_competition.sh  init_aidlc_docs.sh  render_improvement_report.py
skills/kaggle-starter/: SKILL.md
skills/kaggle-winning-research/: SKILL.md
skills/technical-research/: SKILL.md
src/: __init__.py
src/baseline/: data.py  evaluate.py  model.py  tracking.py  train.py
templates/aidlc-docs/: aidlc-state.md  audit.md
tools/kaggle-mcp/: README.md  server.py
(+15 files in other folders)
