[project]
name = "kaggle-ai-dlc-workflow-template"
version = "0.1.0"
description = "AI-DLC style workflow template for Kaggle and technical research projects."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kaggle>=2.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/baseline"]

[dependency-groups]
dev = [
    "jedi>=0.20.0",
    "pytest>=9.0.3",
    "ruff>=0.15.15",
]
research = [
    "hydra-core>=1.3.2",
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.7",
    "loguru>=0.7.3",
    "matplotlib>=3.10.9",
    "mlflow>=3.0.0",
    "numpy>=2.4.6",
    "pandas>=2.2.0,<3",
    "polars>=1.41.2",
    "pyarrow>=23.0.0,<24",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]
mcp = [
    "mcp>=1.0.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
line-length = 100
